# vits2_deepphonemizer

./: .gitignore  CMakeLists.txt
include/: dhwani.h  dhwani.hpp
onnxruntime-osx-arm64-1.20.0/lib/: libonnxruntime.dylib
onnxruntime-osx-arm64-1.20.0/lib/cmake/onnxruntime/: onnxruntimeTargets-release.cmake
onnxruntime-osx-arm64-1.20.0/lib/libonnxruntime.1.20.0.dylib.dSYM/Contents/: Info.plist
onnxruntime-win-x64-1.20.0/: CodeSignSummary-e28d39a1-cb31-49b4-a4f4-2f217a91cd70.md  GIT_COMMIT_ID
onnxruntime-win-x64-1.20.0/include/: onnxruntime_c_api.h  onnxruntime_cxx_api.h
scripts/: export_onnx_dp.py  test_onnx.py  test_onnx.txt
src/: dhwani.hpp  export_onnx_dp.py  main.cpp  phonemizer.cpp  test_dp.py  test_onnx.py  test_text_to_sequence.cpp
